# skills

./: .gitmodules  README.md  README_zh.md
skills/: README.md
skills/ai-short-drama-director/: SKILL.md
skills/auto-image-reader/: SKILL.md
skills/b1-morning-scanner/: SKILL.md
skills/bazi-fortune-analysis/: SKILL.md
skills/bilibili_skill/: SKILL.md
skills/career-future-mirror/: SKILL.md
skills/chip-distribution/: SKILL.md
skills/comfyui-workflow-generator/: SKILL.md
skills/context-maintainer/: SKILL.md
skills/context-maintainer/scripts/: pyproject.toml  requirements.txt  server.py
skills/context-search/: SKILL.md
skills/context-search/scripts/: pyproject.toml  requirements.txt  server.py
skills/event-driven/: SKILL.md  event-signals.md
skills/excel-wps-table-diagnosis/: README.md  SKILL.md
skills/feishu-webhook-skill/: SKILL.md
skills/folder-cleanup-assistant/: SKILL.md
skills/frontend-dev/: SKILL.md
skills/gif-sticker-generator/: SKILL.md
skills/gif-sticker-maker/: SKILL.md
skills/html-presentation-generator/: SKILL.md
skills/image-creator/: SKILL.md
skills/industry-research-report/: SKILL.md
skills/kelly-criterion/: SKILL.md
skills/knowledge-digest/: SKILL.md
skills/macro-analysis/: SKILL.md
skills/markdown-mcp/: SKILL.md
skills/markdown-mcp/scripts/: pyproject.toml  requirements.txt  server.py
skills/minimax-chart/: SKILL.md
skills/minimax-docx/: SKILL.md
skills/minimax-multimodal-toolkit/: SKILL.md
skills/mxai/: SKILL.md
skills/vision-analysis/scripts/: clipboard_image.py  pyproject.toml  requirements.txt
(+54 files in other folders)
