[project]
name = "context-search-mcp"
version = "1.0.0"
description = "MCP server for searching and retrieving .context/ files — optional QMD integration"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
context-search-mcp = "server:main"

[tool.upload]
distributions = ["sdist", "wheel"]
